Adding more data files for Abhiraj

--- a/src/Data Preprocessing and Saving.ipynb
+++ b/src/Data Preprocessing and Saving.ipynb
@@ -70,27 +70,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "91"
+       "129"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "heart_rate_data_directory_path = f'../data/data_files/Saksham/heart/'\n",
+    "heart_rate_data_directory_path = f'../data/data_files/Abhiraj/heart/'\n",
     "heart_rate_ts_data = []\n",
-    "calories_data_directory_path = f'../data/data_files/Saksham/calories/'\n",
+    "calories_data_directory_path = f'../data/data_files/Abhiraj/calories/'\n",
     "calories_ts_data = []\n",
     "activity_label_ts_data = []\n",
-    "sleep_data_directory_path = f'../data/data_files/Saksham/sleep/'\n",
+    "sleep_data_directory_path = f'../data/data_files/Abhiraj/sleep/'\n",
     "sleep_efficiency_ratio = []\n",
     "sleep_stages_summary = []\n",
     "\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,16 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((68, 1440), (68, 1440), (68, 1440), (68,), (68, 4))"
+       "((32, 1440), (32, 1440), (32, 1440), (32,), (32, 4))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,18 +183,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Saving the sleep ratio and sleep stages\n",
-    "np.save(f'../data/data_numpy_arrays/Saksham/sleep_efficiency_ratio.npy', sleep_efficiency_ratio)\n",
-    "sleep_stages_summary.to_csv(f'../data/data_numpy_arrays/Saksham/sleep_stages_summary.csv', index=False)"
+    "user_numpy_array_output_directory = f'../data/data_numpy_arrays/Abhiraj/'\n",
+    "check_output_directory(user_numpy_array_output_directory)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving the sleep ratio and sleep stages\n",
+    "np.save(construct_path(user_numpy_array_output_directory, f'sleep_efficiency_ratio.npy'), sleep_efficiency_ratio)\n",
+    "sleep_stages_summary.to_csv(construct_path(user_numpy_array_output_directory, f'sleep_stages_summary.csv'), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +224,7 @@
        "False"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,55 +236,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Saving the activity_value_ts array\n",
-    "np.save(f'../data/data_numpy_arrays/Saksham/activity_label_ts_data.npy', activity_label_ts_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Remove nans from heart and calories data\n",
-    "heart_rate_ts_data = remove_nans_from_array(heart_rate_ts_data)\n",
-    "calories_ts_data = remove_nans_from_array(calories_ts_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(False, False)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check that no nans in any of the data\n",
-    "np.isnan(heart_rate_ts_data).any(), np.isnan(calories_ts_data).any()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Saving the Calories and Heart Rate data\n",
-    "np.save(f'../data/data_numpy_arrays/Saksham/heart_rate_ts_data.npy', heart_rate_ts_data)\n",
-    "np.save(f'../data/data_numpy_arrays/Saksham/calories_ts_data.npy', calories_ts_data)"
+    "np.save(construct_path(user_numpy_array_output_directory, f'activity_label_ts_data.npy'), activity_label_ts_data)"
    ]
   },
   {
@@ -277,16 +255,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(68, 4)"
+       "(32, 4)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,12 +276,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Saving the activity percentages array\n",
-    "np.save(f'../data/data_numpy_arrays/Saksham/activity_percentages.npy', activity_percentages)"
+    "np.save(construct_path(user_numpy_array_output_directory, f'activity_percentages.npy'), activity_percentages)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Normalizing the Time Series Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove nans from heart and calories data\n",
+    "heart_rate_ts_data = remove_nans_from_array(heart_rate_ts_data)\n",
+    "calories_ts_data = remove_nans_from_array(calories_ts_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, False)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check that no nans in any of the data\n",
+    "np.isnan(heart_rate_ts_data).any(), np.isnan(calories_ts_data).any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving the Calories and Heart Rate data\n",
+    "np.save(construct_path(user_numpy_array_output_directory, f'heart_rate_ts_data.npy'), heart_rate_ts_data)\n",
+    "np.save(construct_path(user_numpy_array_output_directory, f'calories_ts_data.npy'), calories_ts_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving the Calories and Heart Rate data\n",
+    "np.save(construct_path(user_numpy_array_output_directory, f'norm_heart_rate_ts_data.npy'), \n",
+    "        normalize_time_series_array(heart_rate_ts_data, 24, 60))\n",
+    "np.save(construct_path(user_numpy_array_output_directory, f'norm_calories_ts_data.npy'), \n",
+    "        normalize_time_series_array(calories_ts_data, 24, 60))"
    ]
   }
  ],
