--- a/src/Data Preprocessing and Saving.ipynb
+++ b/src/Data Preprocessing and Saving.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,29 +70,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "204"
+       "91"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "heart_rate_data_directory_path = f'../data/data_files/Meghna/heart/'\n",
+    "user_name = 'Saksham'\n",
+    "heart_rate_data_directory_path = f'../data/data_files/{user_name}/heart/'\n",
     "heart_rate_ts_data = []\n",
-    "calories_data_directory_path = f'../data/data_files/Meghna/calories/'\n",
+    "calories_data_directory_path = f'../data/data_files/{user_name}/calories/'\n",
     "calories_ts_data = []\n",
     "activity_label_ts_data = []\n",
-    "sleep_data_directory_path = f'../data/data_files/Meghna/sleep/'\n",
+    "sleep_data_directory_path = f'../data/data_files/{user_name}/sleep/'\n",
     "sleep_efficiency_ratio = []\n",
     "sleep_stages_summary = []\n",
+    "user_numpy_array_output_directory = f'../data/data_numpy_arrays/{user_name}/'\n",
+    "print(check_output_directory(user_numpy_array_output_directory))\n",
     "\n",
     "common_file_nms = get_file_nms(heart_rate_data_directory_path, '*.pickle')\n",
     "common_file_nms = common_file_nms.intersection(get_file_nms(calories_data_directory_path, '*.pickle'))\n",
@@ -109,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,16 +172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((172, 1440), (172, 1440), (172, 1440), (172,), (172, 4))"
+       "((68, 1440), (68, 1440), (68, 1440), (68,), (68, 4))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,28 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "user_numpy_array_output_directory = f'../data/data_numpy_arrays/Meghna/'\n",
-    "check_output_directory(user_numpy_array_output_directory)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +213,7 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,28 +244,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(172, 4)"
+       "(68, 4)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "activity_percentages = activity_percentage_finder(activity_label_ts_data)\n",
+    "activity_percentages = activity_percentage_finder(activity_label_ts_data[:, list(range(120)) + list(range(600, 24*60))], hours=16)\n",
     "activity_percentages.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +302,7 @@
        "(False, False)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
